V4: Handle all array-like containers when converting to QJsonArray

Commit b9bfdea0e2c6721d2306af0ecc44f88da9988957 removed specialized
code for QVariantList conversions by relying on sequences instead.

Some checks for sequences and other array-like containers were missed.
Add those and perform all calls to QJsonObject::toJsonArray through a
common QV4::Object interface.

Amends b9bfdea0e2c6721d2306af0ecc44f88da9988957

Fixes: QTBUG-123993
Change-Id: Ia671d556af4f2b4d44f652fa93182977d88621f2
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 152e6716baeffd22c381df8c37c188b8eab7d9df)