src/qml/jsruntime/qv4jsonobject.cpp
@@ -988,12 +988,16 @@ QJsonValue JsonObject::toJsonValue(const Value &value, V4ObjectSet &visitedObjec
 
     Q_ASSERT(value.isObject());
     Scope scope(value.as<Object>()->engine());
-    ScopedArrayObject a(scope, value);
-    if (a)
+    if (ScopedArrayObject a{ scope, value }) {
         return toJsonArray(a, visitedObjects);
-    ScopedObject o(scope, value);
-    if (o)
+    } else if (Scoped<QV4::Sequence> a{ scope, value }) {
+        return toJsonArray(a, visitedObjects);
+    } else if (Scoped<QmlListWrapper> lw{ scope, value }) {
+        return toJsonArray(lw, visitedObjects);
+    } else if (ScopedObject o{ scope, value }) {
         return toJsonObject(o, visitedObjects);
+    }
+
     return QJsonValue(value.toQString());
 }
 
@@ -1058,7 +1062,7 @@ QV4::ReturnedValue JsonObject::fromJsonArray(ExecutionEngine *engine, const QJso
     return a.asReturnedValue();
 }
 
-QJsonArray JsonObject::toJsonArray(const ArrayObject *a, V4ObjectSet &visitedObjects)
+QJsonArray JsonObject::toJsonArray(const Object *a, V4ObjectSet &visitedObjects)
 {
     QJsonArray result;
     if (!a)
